force-app/main/default/objects/Team__c/fields/Application_To_Objects__c.field-meta.xml
<CustomField>
    <fullName>Application_To_Objects__c</fullName>
    <label>Application To Objects</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>