force-app/main/default/objects/Team__c/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To set the default team for an Account Type team</description>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>