force-app/main/default/objects/Team__c/fields/Team_Validation__c.field-meta.xml
<CustomField>
    <fullName>Team_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Team Validation</label>
    <type>Checkbox</type>
</CustomField>