force-app/main/default/objects/Team__c/validationRules/Team_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Team_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>Team_Validation__c = true</errorConditionFormula>
    <errorDisplayField>Default__c</errorDisplayField>
    <errorMessage>There is an already active default team for this Account</errorMessage>
</ValidationRule>